# plonkathon

./: README.md  pyproject.toml
.github/workflows/: ci.yml
plonkathon/: setup.py  test.py  utils.py
plonkathon/test/: mini_poseidon.py
