[tool.poetry]
name = "plonkathon"
version = "0.1.0"
description = "A simple Python implementation of PLONK adapted from py_plonk"
authors = ["Bob Liu <akagi201@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-ecc = "^6.0.0"
merlin = {git = "https://github.com/nalinbhardwaj/curdleproofs.pie", rev = "master", subdirectory = "merlin"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
explicit_package_bases = true